# ssdv2

./: README.md  pyproject.toml
.github/workflows/: test.yml
.trunk/: trunk.yaml
.trunk/hooks/: notebook_format.sh
scripts/: create_coco_subset.ipynb
scripts/notebooks/: create_coco_subset.ipynb  loss_investigation.ipynb  network_analysis.ipynb  visualise_dataset.ipynb
src/ssdv2/dataset/: __init__.py  dataset_manager.py  dataset_sampler.py
src/ssdv2/dataset/transforms/: __init__.py  letterbox_transform.py
src/ssdv2/models/: __init__.py  ssdv2.py
src/ssdv2/models/backbones/: __init__.py  conv_next_backbone.py
src/ssdv2/models/backbones/convnext/: __init__.py  (+3 more)
src/ssdv2/models/components/: __init__.py  conv_next_block.py  layer_norm.py  scale.py
src/ssdv2/models/heads/: __init__.py  fcos_head.py
src/ssdv2/models/necks/: __init__.py  conv_next_neck.py
src/ssdv2/structs/: __init__.py  data_subset.py  feature_map.py  frame_labels.py
src/ssdv2/structs/configs/: __init__.py  train_config.py
src/ssdv2/structs/exceptions/: __init__.py  dataset_error.py
src/ssdv2/utils/: meta_logger.py
test_data/: dog.txt
tests/dataset/: test_dataset_manager.py  test_dataset_sampler.py
tests/dataset/transforms/: test_letterbox_transform.py
tests/models/: test_ssdv2.py
tests/models/backbones/: test_conv_next_backbone.py
tests/models/components/: test_scale.py
tests/models/heads/: test_fcos_head.py
tests/models/necks/: test_conv_next_neck.py
tests/structs/: test_feature_map.py  test_frame_labels.py
tests/structs/exceptions/: test_dataset_error.py
