[project]
name = "ssdv2"
version = "0.1.0"
description = "Second generation SSD network."
authors = [{ name = "Kyle Newman", email = "kyle@thenewmans.com.au" }]
dependencies = [
  "pydantic>=2.11.7",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "fiftyone>=1.7.1",
  "timm>=1.0.19",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = ["notebook>=7.4.4", "pytest>=8.4.1"]
